--- a/Example-votingapp-v2/postgres-pod.yml
+++ b/Example-votingapp-v2/postgres-pod.yml
@@ -24,7 +24,7 @@ spec:
             - name: POSTGRES_USER
               value: postgres
             - name: POSTGRES_PASSWORD
-              vale: postgres
+              value: postgres
           ports:
             - containerPort: 5432
 
