--- a/Example-votingapp-v2/voting-app-pod.yml
+++ b/Example-votingapp-v2/voting-app-pod.yml
@@ -1,18 +1,15 @@
-apiVerison: apps/v1
-
+apiVersion: apps/v1
 kind: Deployment
-
 metadata:
   name: voting-app-deployment
   labels:
     app: demo-voting-app
-
 spec:
   replicas: 1
   selector:
-    name: voting-app-pod
-    app: demo-voting-app
-
+    matchLabels:
+      name: voting-app-pod
+      app: demo-voting-app
   template:
     metadata:
       name: voting-app-pod
@@ -22,7 +19,7 @@ spec:
 
     spec:
       containers:
-        - name: voting-app
-          image: dockersamples/examplevotingapp_vote
-          ports:
-            - containerPort: 80
+      - name: voting-app
+        image: dockersamples/examplevotingapp_vote
+        ports:
+        - containerPort: 80
